# POLARISGEME2_MPC

./: Dockerfile  License.txt  README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/lib/gem_gazebo/: logger.py  obstacle_spawner.py  path_and_obstacle_publisher.py
devel/lib/pkgconfig/: gem_description.pc  gem_gazebo.pc  gem_mpc.pc  gem_pure_pursuit_sim.pc  gem_stanley_sim.pc  mpc_controller.pc
devel/share/gem_description/cmake/: gem_descriptionConfig.cmake
devel/share/gem_gazebo/cmake/: gem_gazeboConfig.cmake
devel/share/gem_mpc/cmake/: gem_mpcConfig.cmake
devel/share/gem_pure_pursuit_sim/cmake/: gem_pure_pursuit_simConfig.cmake
devel/share/gem_stanley_sim/cmake/: gem_stanley_simConfig.cmake
devel/share/mpc_controller/cmake/: mpc_controllerConfig.cmake
src/gem_simulator/gem_description/config_rviz/: gem_gazebo_rviz.rviz
src/gem_simulator/gem_description/urdf/: expanded_gem.urdf  gem.gazebo  gem.urdf.xacro
src/gem_simulator/gem_gazebo/: CMakeLists.txt
src/gem_simulator/gem_gazebo/data/: left_boundary_points.csv  obstacles.csv  obstacles_2.csv  obstacles_3.csv  right_boundary_points.csv  waypoints.csv
src/gem_simulator/gem_gazebo/launch/: gem_gazebo_rviz.launch  gem_gazebo_rviz_mpc.launch
src/gem_simulator/gem_gazebo/models/custom_cube/: model.sdf
src/gem_simulator/gem_gazebo/scripts/: center_sample_points.csv  left_boundary_points.csv  path_and_obstacles_publisher.py  path_processing.py  right_boundary_points.csv  waypoints.csv
src/polaris_controllers/gem_mpc/: CMakeLists.txt
(+14 files in other folders)
